<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">360 VUZ</string>
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="welcome_message">Welcome To 360 MEA</string>
    <string name="welcome_message_gridview">EMERGE INTO REALITY</string>
    <string name="website">Website:</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>
    <string name="email">Email:</string>
    <string name="contact_detail">Like us to save a life and receive latest 360 exclusive video and news.</string>
    <string name="phone">Phone:</string>
    <string name="country">Country:</string>
    <string name="category">Category:</string>
    <string name="details">Detail:</string>
    <string name="share">Share:</string>
    <string name="download">Download:</string>
    <string name="delete">Delete:</string>
    <string name="link">Link:</string>
    <string name="glass_voice_trigger">three sixty</string>
    <string name="messgae_failed">No Live Broadcast available Now</string>
    <string name="messgae_sucess"></string>
    <string name="messgae_bottom">Get Notified on the next live broadcast</string>
    <string name="download_lebal">360 Video Link</string>
    <string name="download_btn">Search</string>
    <string name="search">Search</string>
    <string name="keywordlebal">Keywords</string>
    <string name="select_category">Select Category</string>
    <string name="select_city">Select City</string>
    <string name="select_detail">Select Detail</string>
    <string name="twitter_consumer_key">xwWUX7uRyXhZXPjQn4pJC4USf</string>
    <string name="twitter_consumer_secret">clzs0pJjv4wPhb7tov2yNhSKjR1BGW5LTgR8lQs7PVoldN4LM4</string>
    <string name="authenticating_your_app_message"> Authenticating your app... </string>
    <!-- <string name="app_id">211568892533108</string> -->		<!--  Testing  -->
    <string name="app_id">893530320657596</string>   <!--  Live FB -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_signin">SigninActivity</string>

</resources>