<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<ImageButton
        android:id="@+id/videoPlay"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message"
        android:layout_below="@+id/status"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="5sp"
        android:background="@android:color/transparent"
        android:src="@drawable/play"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message"
        android:layout_below="@+id/status"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:src="@drawable/livebrodcast_big"
        android:visibility="visible" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:text="@string/messgae_bottom"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="sans" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email_labal"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/keywoard"
        android:singleLine="true"
        android:ems="10"
          android:focusableInTouchMode="true"
        android:inputType="textEmailAddress"
        android:paddingLeft="5sp"
        android:textColor="@android:color/white"
        android:typeface="sans" >

    
    </EditText>

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editEmail"
        android:layout_below="@+id/editEmail"
        android:layout_marginTop="5sp"
        android:background="@drawable/btncover"
        android:text="Email"
        android:textColor="@android:color/white"
        android:typeface="sans" />

    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/downward" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45sp"
            android:background="@color/action_bar" >

            <ImageButton
                android:id="@+id/btn_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:paddingRight="10sp"
                android:src="@drawable/back" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@android:color/transparent"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/page_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="Live BroadCast"
                android:visibility="gone"
                android:textSize="@dimen/action_bar_title_text"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/category_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/page_Title"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:src="@drawable/livebroadcast" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:visibility="gone"
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_layout"
        android:background="@drawable/menubar" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/messgae_failed"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/Email_labal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_below="@+id/message"
        android:layout_marginTop="30sp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="sans" />

</RelativeLayout>